--- a/index.html
+++ b/index.html
@@ -3,12 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="app" class="container">
+        
+        <div class="sidebar">
+            <!-- PROFILE -->
+           <div class="user-section">
+                <div class="profile">
+                    <img :src="'./img/avatar' + user.avatar + '.jpg'" alt="">
+                    <span>Nome Utente</span>
+                </div>
+                <div class="user-icon">
+                    <a href="#"><i class="fas fa-circle-notch"></i></a>
+                    <a href="#"><i class="fas fa-comment-alt"></i></a>
+                    <a href="#"><i class="fas fa-ellipsis-v"></i></a>
+                </div>
+           </div>
+
+           <!-- NOTIFICATIONS -->
+            <div class="notifications">
+                <i class="fas fa-bell-slash"></i>
+                <div class="notifications-text">
+                    <span>Ricevi notifiche di nuovi messaggi</span>
+                    <a href="#">Atiiva notifiche desktop</a>
+                </div>
+           </div>
+
+            <!-- SEARCH -->
+           <div class="search">
+               <div class="search-bar">
+                   <i class="fas fa-search"></i>
+                   <input type="text" name="" id="" placeholder="Cerca o inizia un anuova chat">
+               </div>
+           </div>
+           <ul>
+               <li>
+
+               </li>
+           </ul>
+        </div>
+
+        <div class="content">
+
+            <header>
+
+            </header>
+
+            <main>
+
+            </main>
+
+            <footer>
+
+            </footer>
+        </div>
+    </div>
 
     <!-- JS -->
     <script src="./js/main.js"></script>
