--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
            <!-- CONTACTS LIST -->
            <div class="contacts">
                <ul>
-                   <li v-for="(name,avatar) in contacts">
-                        <img :src="'./img/avatar' + avatar + '.jpg'" alt="">
-                        <span>{{name}}</span>
+                   <li v-for="contact in contacts">
+                        <img :src="'./img/avatar' + contact.avatar + '.jpg'" alt="">
+                        <span>{{contact.name}}</span>
                    </li>
                </ul>
            </div>
