--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                    <a href="#">
                        <i class="fas fa-search"></i>
                    </a>
-                   <input type="text" name="" id="" placeholder="Cerca o inizia un anuova chat">
+                   <input type="text" name="" id=""
+                        @keyup="searchContact"
+                        v-model="searchString" 
+                        placeholder="Cerca o inizia un anuova chat">
                </div>
            </div>
 
@@ -52,6 +55,7 @@
                         <li 
                             v-for="(contact, index) in contacts" @click="setIndexContact(index)"
                             :class="indexContacts === index ? 'active' : ''"
+                            v-show="contact.visible"
                         >
                             <img :src="'./img/avatar' + contact.avatar + '.jpg'" alt="">
                             <span>{{contact.name}}</span>
