--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <img :src="'./img/avatar' + contacts[indexContacts].avatar + '.jpg'" alt="">
                     <div class="info">
                         <span>{{contacts[indexContacts].name}}</span>
-                        <span>Ultimo accesso oggi alle 10:35 </span>
+                        <span>Ultimo accesso alle{{contacts[indexContacts].lastLog}}</span>
                     </div>
                 </div>
 
